# philipp

./: list_measurements.py  read_avantes.py  read_wispapp_file.py  smart_it.py
Ecospot/Ecospot_proof-of-concept/: android.txt  main.py  wibralgorithm.py
Ecospot/Ecospot_proof-of-concept/data/: measurement_20150512_123310.txt  measurement_20150512_123318.txt  measurement_20150512_123340.txt
Ecospot/libusb/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  PORTING  README  TODO  aclocal.m4  compile  config.guess  config.h.in  config.sub  configure  configure.ac  depcomp  install-sh  libusb-1.0.pc.in  ltmain.sh  missing
Ecospot/libusb/Xcode/: common.xcconfig  config.h  debug.xcconfig  libusb.xcconfig  libusb_debug.xcconfig  libusb_release.xcconfig  release.xcconfig
Ecospot/libusb/Xcode/libusb.xcodeproj/: project.pbxproj
Ecospot/libusb/android/: README  config.h
Ecospot/libusb/android/jni/: Android.mk  Application.mk  examples.mk  libusb.mk  tests.mk
Ecospot/libusb/android/libs/armeabi/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  measure_avantes  measure_ecospot  sam3u_benchmark  stress  switch_leoni  switch_leoni_loop  xusb
Ecospot/libusb/android/libs/armeabi-v7a/: copy2droid.sh  dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  measure_avantes  measure_ecospot  sam3u_benchmark  stress  switch_leoni  switch_leoni_loop  xusb
Ecospot/libusb/android/libs/mips/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  measure_avantes  measure_ecospot  sam3u_benchmark  stress  switch_leoni  switch_leoni_loop  xusb
Ecospot/libusb/android/libs/x86/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  measure_avantes  measure_ecospot  sam3u_benchmark  stress  switch_leoni  switch_leoni_loop  xusb
Ecospot/libusb/doc/: Makefile.am  Makefile.in  doxygen.cfg.in
Ecospot/libusb/examples/: Makefile.am  Makefile.in  dpfp.c  dpfp_threaded.c  ezusb.c  ezusb.h  fxload.c  hotplugtest.c  listdevs.c  measure_avantes_android.c  measure_avantes_android.h  measure_ecospot_android.c  measure_ecospot_android.h  sam3u_benchmark.c  switch_leoni_android.c  switch_leoni_android.h  switch_leoni_loop_android.c  xusb.c
Ecospot/libusb/examples/getopt/: getopt.c  getopt.h  getopt1.c
Ecospot/libusb/libusb/: Makefile.am  Makefile.in  core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb-1.0.def  libusb-1.0.rc  libusb.h  libusbi.h  strerror.c  sync.c  version.h  version_nano.h
Ecospot/libusb/libusb/os/: darwin_usb.c  darwin_usb.h  linux_netlink.c  linux_udev.c  linux_usbfs.c  linux_usbfs.h  netbsd_usb.c  openbsd_usb.c  poll_posix.c  poll_posix.h  poll_windows.c  poll_windows.h  threads_posix.c  threads_posix.h  threads_windows.c  threads_windows.h  wince_usb.c  wince_usb.h  windows_common.h  windows_usb.c  windows_usb.h
Ecospot/libusb/m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
Ecospot/libusb/msvc/: config.h  ddk_build.cmd  errno.h  fxload_2010.vcxproj  fxload_2012.vcxproj  fxload_2012.vcxproj.filters  fxload_2013.vcxproj  fxload_sources  getopt_2005.vcproj  getopt_2010.vcxproj  getopt_2012.vcxproj  getopt_2012.vcxproj.filters  getopt_2013.vcxproj  getopt_sources  hotplugtest_2010.vcxproj  hotplugtest_2010.vcxproj.filters  hotplugtest_2012.vcxproj  hotplugtest_2013.vcxproj  hotplugtest_sources  inttypes.h  libusb.dsw  libusb_2005.sln  libusb_2010.sln  libusb_2012.sln  libusb_2013.sln  libusb_dll.dsp  libusb_dll_2005.vcproj  libusb_dll_2010.vcxproj  libusb_dll_2010.vcxproj.filters  libusb_dll_2012.vcxproj  libusb_dll_2012.vcxproj.filters  libusb_dll_2013.vcxproj  libusb_dll_wince.vcproj  libusb_sources  libusb_static.dsp  libusb_static_2005.vcproj  libusb_static_2010.vcxproj  libusb_static_2012.vcxproj  libusb_static_2012.vcxproj.filters  libusb_static_2013.vcxproj  (+27 more)
Ecospot/libusb/tests/: Makefile.am  Makefile.in  libusb_testlib.h  stress.c  testlib.c
